--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,9 +6,12 @@
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/root-context.xml</param-value>
+		<param-value>/WEB-INF/spring/root-context.xml
+					/WEB-INF/spring/security-context.xml
+					classpath:/mybatis-config.xml <!-- 추가해야 작동 -->
+		</param-value>
 	</context-param>
-	
+
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -50,10 +53,4 @@
       <url-pattern>/*</url-pattern>
    </filter-mapping>
    <!-- 한글 안깨지게 처리 종료 -->
-   <context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/root-context.xml
-					classpath:/mybatis-config.xml <!-- 추가해야 작동 -->
-		</param-value>
-	</context-param>
 </web-app>
